feat: 피드 파일 업로드 검증 및 북마크 공유 기능 추가
- 외부 링크 카드, 게임 이름, 트렌딩 게임 기능 제거
- 영상 썸네일을 선택값으로 변경
- 영상 업로드 제한을 500MB 이하, 2분 이하로 검증
- 게시글 북마크 및 공유 API 추가